fixed table column to be aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,10 @@ table {
   width: 100%;
 }
 
+td {
+  width: 70%;
+}
+
 td,
 th {
   border: 1px solid black;
